add download option

--- a/templates/index.html
+++ b/templates/index.html
@@ -53,6 +53,11 @@
           <form action="/generate" method="post">
             <button type="submit">Generate</button>
           </form>
+
+          <!-- Neues Formular für die Generierung der Maps -->
+          <form action="/download">
+            <button type="submit">Download</button>
+          </form>
         </section>
       </div>
     </main>
