--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
   <body>
     <nav class="container-fluid">
       <ul>
-        <li><strong>Document Analysis</strong></li>
+        <li><strong>CapMap</strong></li>
       </ul>
       <ul>
         <li><a href="#">Home</a></li>
@@ -42,16 +42,6 @@
               required
             />
             <button type="submit">Upload</button>
-          </form>
-
-          <!-- Neues Formular für die Analyse -->
-          <form action="/analyze" method="post">
-            <button type="submit">Analyze</button>
-          </form>
-
-          <!-- Neues Formular für die Generierung der Maps -->
-          <form action="/generate" method="post">
-            <button type="submit">Generate</button>
           </form>
 
           <!-- Neues Formular für die Generierung der Maps -->
