--- a/templates/index.html
+++ b/templates/index.html
@@ -57,7 +57,10 @@
 
           
         
-          <div id="loading" style="display: none;">Uploading and processing...</div>
+          <div id="loading" style="display: none;">
+            <div class="loader"></div>
+            Uploading and processing...
+        </div>
           <div id="downloadLink" style="display: none;">
               Files processed. <a href="/download">Download Capability Map</a>
           </div>
