--- a/templates/index.html
+++ b/templates/index.html
@@ -28,6 +28,10 @@
             map. Our system analyzes the text and constructs a visual
             representation of the capabilities or themes within the documents.
           </p>
+          <p>
+            Max files: 3<br>
+            Max size: 5mb
+          </p>
           <form id="uploadForm" action="/upload" method="post" enctype="multipart/form-data">
             <input type="file" id="document" name="document" accept=".pdf, .doc, .docx, .xls, .xlsx, .csv" multiple required />
             <button type="submit">Upload</button>
